Resolve spacing issues

--- a/static/style.css
+++ b/static/style.css
@@ -35,11 +35,11 @@ body {
 
 
 main {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    /* display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: row; */
     /* height: 90%; */
-    transition: all 0.5s ease-in-out;
     opacity: .87;
 
 }
